# GameStringer

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .tauri-updater-key  .tauri-updater-key.pub  CHANGELOG.md  CONTRIBUTING.md  README.md  README_DE.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PL.md  README_PT.md  README_RU.md  README_ZH.md  RELEASE_NOTES.md  ROADMAP.md  TODO.md  __s1.txt  __testout.txt  __tr.json  gamestringer.key.pub  index-en.html  index-old.html  index.html  latest.json  launch-desktop.bat  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  styles-v3.css  tailwind.config.ts  translation-audit-report.json  (+4 more)
.githooks/: pre-commit
__tests__/: README.md  basic.test.ts  middleware.test.ts
app/: globals.css  layout.tsx  page.tsx  page.tsx.old
components/: advanced-filters.tsx  audio-patcher.tsx  audio-translation.tsx  community-translations.tsx  context-aware-translation.tsx  cover-picker.tsx  custom-sorting.tsx  detailed-statistics.tsx  donation-dialog.tsx  dry-run-scanner.tsx  error-boundary-wrapper.tsx  error-boundary.tsx  game-card.tsx  game-detail-client.tsx  game-image.tsx  gamemaker-translator.tsx  gspack-dialog.tsx  hltb-stats.tsx  injekt-overlay-config.tsx  injekt-realtime-stats.tsx  injekt-ui-enhanced.tsx  inline-translator.tsx  intelligent-placeholder.tsx  intelligent-search.tsx  language-selector.tsx  lazy-page.tsx  ocr-image-processor.tsx  offline-translator.tsx  providers.tsx  responsive-layout.tsx  scan-button.tsx  stats-dashboard.tsx  steam-family-sharing.tsx  store-manager.tsx  system-overlay.tsx  theme-provider.tsx  theme-toggle.tsx  translation-batch-editor.tsx  translation-import-dialog.tsx  translation-profile-manager.tsx  (+5 more)
data/: stores.ts
docs/: 2FA_SUPPORT.md  ANTIVIRUS.md  API_MIGRATION_MAP.md  API_REFERENCE.md  API_REFERENCE_EN.md  ARCHITETTURA.md  ARCHITETTURA_EN.md  DESIGN_CRITIQUE_2026-06.md  DEVELOPER_GUIDE.md  EDITOR_IMPLEMENTATION_SUMMARY.md  ENGINE-COVERAGE.md  GUIDA_UTENTE.md  MARKETING.md  PATCH_SYSTEM.md  PLUGIN_SYSTEM.md  PORT_MANAGEMENT.md  PROJECT_STATUS.md  PROMO_v1.9.0.md  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RENPY_COLLAUDO_CHECKLIST.md  RPGMAKER_COLLAUDO_CHECKLIST.md  RUST-TEST-TRIAGE.md  SCOPE_V2.md  SECRETS_SETUP.md  TODO.md  TRANSLATION_EDITOR.md  TRANSLATION_INNOVATIONS_2026.md  TROUBLESHOOTING.md  TROUBLESHOOTING_EN.md  USER_GUIDE_DE.md  USER_GUIDE_EN.md  USER_GUIDE_ES.md  USER_GUIDE_FA.md  USER_GUIDE_FR.md  USER_GUIDE_JA.md  USER_GUIDE_KO.md  USER_GUIDE_PL.md  USER_GUIDE_PT.md  (+14 more)
e2e/: danganronpa.spec.ts  (+2 more)
gs-hook/: CMakeLists.txt  README.md  SPIKE-GDI-RUNBOOK.md  build-all.ps1
gs-hook/include/: gs_log.h  gs_overlay_ipc.h  text_source.h
gs-hook/injector/: injector_main.cpp
gs-hook/src/: dllmain.cpp  gs_overlay_ipc.cpp  registry.cpp
gs-hook/src/sources/: source_gdi.cpp  source_gdi_glyph.cpp  source_unity_mono.cpp  source_unreal_ftext.cpp
gs-hook/testapp/: CMakeLists.txt  gdi_text_test.cpp  test-cache.gstc
lib/: auth.ts  (+177 more)
(+10673 files in other folders)
